@@ -4672,6 +4672,12 @@ http://furius.ca/beancount/doc/proposal-query
   it down. Every couple of years I clean this mess up and put it in the sections
   above.
 
+  - Rendering idea: If a posting moved the balance in the unusual direction
+    (positive for Income, negative for Expenses), it could be rendered with a
+    highlight or a different color. These are rare and unusualy. One could also
+    do the same for Assets (when the amount moves up) or Liabilities (when it
+    moves down).
+
   - Create a new "AssertQuery" directive to assert that the result of a
     particular query produces a particular Inventory. For example, you could
     check your total contributions to an account over a period of time like
